cros: ignore power button forcing off when brightness is on but screen not ready

context:
For some devices, after stopping forcing off, we may leave an interval that
brightness non-zero level signal is received but screen is not yet turned on.
If a power button pressed-and-released action happens before screen is actually
turned on, user may have a "screen-turned-on-and-then-turned-off-immediately"
situation.

changes:
Instead directly set |screen_state_| to on when non-zero brightness level
is received, start a timer and set the state on timeout. This change is in hope
that |screen_off_when_power_button_down_| is the correct value.

Bug: 735225
Test: test on caroline with "when display forced off, press a key and then
immediate follow power button press-and-release". Also added test coverage.
Change-Id: Ie0ff224fc6b9f4317db9e4fa778698881bb03aa9